# inventree-amazon-plugin

./: LICENSE  README.md  pyproject.toml
inventree_amazon_plugin/: __init__.py  amazon.py
tests/: test_inventree_amazon_plugin.py
