[project]
name = "inventree-spoolman-plugin"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = ""}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.entry-points.console_scripts]
inventree-spoolman-plugin = "inventree_spoolman_plugin.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
